--- a/CoreFramework/test-output/old/Portfolio Suite/methods-alphabetical.html
+++ b/CoreFramework/test-output/old/Portfolio Suite/methods-alphabetical.html
@@ -1,20 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Portfolio Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7e7986">  <td>18/08/19 19:28:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PortFolioTest.createPortFolioTest(java.util.Hashtable)[pri:1, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@26f67b76]">createPortFolioTest</td> 
-  <td>TestNG@1609975755</td>   <td></td> </tr>
-<tr bgcolor="6ac6e3">  <td>18/08/19 19:28:16</td>   <td>-2963</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@617c74e5]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@219332701</td>   <td></td> </tr>
-<tr bgcolor="6ac6e3">  <td>18/08/19 19:28:16</td>   <td>-2944</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@26f67b76]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1609975755</td>   <td></td> </tr>
-<tr bgcolor="6ac6e3">  <td>18/08/19 19:28:18</td>   <td>-625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@617c74e5]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>TestNG@219332701</td>   <td></td> </tr>
-<tr bgcolor="6ac6e3">  <td>18/08/19 19:28:18</td>   <td>-625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@26f67b76]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>TestNG@1609975755</td>   <td></td> </tr>
-<tr bgcolor="63a2ba">  <td>18/08/19 19:28:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@617c74e5]">loginTest</td> 
-  <td>TestNG@219332701</td>   <td></td> </tr>
-<tr bgcolor="6ac6e3">  <td>18/08/19 19:30:01</td>   <td>101713</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@617c74e5]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>TestNG@219332701</td>   <td></td> </tr>
-<tr bgcolor="6ac6e3">  <td>18/08/19 19:30:20</td>   <td>120548</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@26f67b76]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>TestNG@1609975755</td>   <td></td> </tr>
+<tr bgcolor="936da8">  <td>18/08/19 23:02:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PortFolioTest.createPortFolioTest(java.util.Hashtable)[pri:1, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@4215838f]">createPortFolioTest</td> 
+  <td>pool-1-thread-1@2008373045</td>   <td></td> </tr>
+<tr bgcolor="e474a4">  <td>18/08/19 22:59:28</td>   <td>-186025</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@36b0fcd5]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>pool-1-thread-1@2008373045</td>   <td></td> </tr>
+<tr bgcolor="e474a4">  <td>18/08/19 23:02:34</td>   <td>-409</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@4215838f]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>pool-1-thread-1@2008373045</td>   <td></td> </tr>
+<tr bgcolor="e474a4">  <td>18/08/19 22:59:32</td>   <td>-181776</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@36b0fcd5]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-1@2008373045</td>   <td></td> </tr>
+<tr bgcolor="e474a4">  <td>18/08/19 23:01:57</td>   <td>-36958</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@36b0fcd5]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-1@2008373045</td>   <td></td> </tr>
+<tr bgcolor="e474a4">  <td>18/08/19 23:02:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@4215838f]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-1@2008373045</td>   <td></td> </tr>
+<tr bgcolor="e3766b">  <td>18/08/19 22:59:33</td>   <td>-180684</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@36b0fcd5]">loginTest</td> 
+  <td>pool-1-thread-1@2008373045</td>   <td></td> </tr>
+<tr bgcolor="e3766b">  <td>18/08/19 23:01:57</td>   <td>-36958</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@36b0fcd5]">loginTest</td> 
+  <td>pool-1-thread-1@2008373045</td>   <td></td> </tr>
+<tr bgcolor="e474a4">  <td>18/08/19 23:01:56</td>   <td>-38411</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@36b0fcd5]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-1@2008373045</td>   <td></td> </tr>
+<tr bgcolor="e474a4">  <td>18/08/19 23:02:33</td>   <td>-610</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@36b0fcd5]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-1@2008373045</td>   <td></td> </tr>
+<tr bgcolor="e474a4">  <td>18/08/19 23:04:10</td>   <td>95958</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@4215838f]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-1@2008373045</td>   <td></td> </tr>
 </table>
