--- a/CoreFramework/test-output/old/Portfolio Suite/toc.html
+++ b/CoreFramework/test-output/old/Portfolio Suite/toc.html
@@ -22,16 +22,16 @@
 </tr></table>
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Portfolio Test (0/1/1)</td><td valign='top' align='right'>
-  <a href='Portfolio Test.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Login Test (0/2/0)</td><td valign='top' align='right'>
+  <a href='Login Test.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-passed'>
+<table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Login Test (1/0/0)</td><td valign='top' align='right'>
-  <a href='Login Test.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Portfolio Test (0/1/1)</td><td valign='top' align='right'>
+  <a href='Portfolio Test.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
